udate technical task

--- a/MathCalculatio/MathCalculation.csproj
+++ b/MathCalculatio/MathCalculation.csproj
@@ -7,7 +7,7 @@
     <ProjectGuid>{0BC8AC6D-7C88-4EFC-A84E-A84F2612A835}</ProjectGuid>
     <OutputType>WinExe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>MathCalculatio</RootNamespace>
+    <RootNamespace>MathCalculation</RootNamespace>
     <AssemblyName>MathCalculatio</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
@@ -82,6 +82,7 @@
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
+      <DesignTime>True</DesignTime>
     </Compile>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
